--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-redux": "^7.2.1",
+    "react-redux-form": "^1.16.14",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.2"
