--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "amazon-cognito-identity-js": "^4.3.4",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.0",
     "framer-motion": "^2.3.0",
     "react": "^16.13.1",
