--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "amazon-cognito-identity-js": "^4.3.4",
+    "aws-sdk": "^2.739.0",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.0",
     "framer-motion": "^2.3.0",
@@ -17,7 +18,6 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
-    "react-redux": "^7.2.1",
     "react-redux-form": "^1.16.14",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
