--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.5.0",
     "framer-motion": "^2.3.0",
     "mysql": "^2.18.1",
+    "query-string": "^6.13.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
@@ -25,7 +26,8 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
