--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.0",
     "mysql": "^2.18.1",
+    "npm-merge-driver": "^2.3.6",
     "query-string": "^6.13.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
@@ -49,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest": "^26.4.2"
   }
 }
