--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.739.0",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.0",
+    "lodash": "^4.17.20",
     "mysql": "^2.18.1",
     "npm-merge-driver": "^2.3.6",
     "query-string": "^6.13.2",
