--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
     "react-geocode": "^0.2.2",
-    "react-google-login": "^5.1.21",
+    "react-google-login": "^5.1.22",
     "react-icons": "^3.10.0",
+    "react-jwt": "^1.0.7",
     "react-redux": "^7.2.1",
     "react-redux-form": "^1.16.14",
     "react-router-bootstrap": "^0.25.0",
