--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
   },
   "devDependencies": {
     "@testing-library/react": "^9.5.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
     "react-test-renderer": "^16.13.1"
   }
 }
